--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -12,7 +12,7 @@
     <aside class="sidebar" aria-label="Primary">
       <nav>
         <ul>
-          <li class="active">Dashboard</li>
+          <li class="active"><span class="side-icon" aria-hidden="true"><svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M3 13h8V3H3v10zM3 21h8v-6H3v6zM13 21h8V11h-8v10zM13 3v6h8V3h-8z" fill="currentColor"/></svg></span>Dashboard</li>
         </ul>
       </nav>
     </aside>
