--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -13,9 +13,9 @@
     <aside class="profile-sidebar">
       <nav>
         <ul>
-          <li class="active" data-section="personal" role="button" tabindex="0">Personal</li>
-          <li data-section="professional" role="button" tabindex="0">Professional</li>
-          <li data-section="social" role="button" tabindex="0">Social</li>
+          <li class="active" data-section="personal" role="button" tabindex="0"><span class="side-icon" aria-hidden="true"><svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12 12a5 5 0 1 0 0-10 5 5 0 0 0 0 10zm0 2c-4.418 0-8 2.239-8 5v1h16v-1c0-2.761-3.582-5-8-5z" fill="currentColor"/></svg></span>Personal</li>
+          <li data-section="professional" role="button" tabindex="0"><span class="side-icon" aria-hidden="true"><svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M6 7V6a3 3 0 0 1 3-3h6a3 3 0 0 1 3 3v1h2v13a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V7h2zm5 0h2V6H11v1z" fill="currentColor"/></svg></span>Professional</li>
+          <li data-section="social" role="button" tabindex="0"><span class="side-icon" aria-hidden="true"><svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12 3a4 4 0 1 0 0 8 4 4 0 0 0 0-8zM6 14.5a6 6 0 0 1 12 0V20H6v-5.5z" fill="currentColor"/></svg></span>Social</li>
         </ul>
       </nav>
     </aside>
@@ -65,8 +65,8 @@
 
             <div class="form-actions">
               <button id="savePersonal" class="icon-save-btn" aria-label="Save Personal" title="Save Personal">
-                <!-- floppy/save icon -->
-                <svg viewBox="0 0 24 24" width="18" height="18" aria-hidden="true" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M5 3h11l4 4v11a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1z" stroke="currentColor" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/><path d="M17 21v-7a2 2 0 0 0-2-2H9a2 2 0 0 0-2 2v7" stroke="currentColor" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/><path d="M7 3v4h10V3" stroke="currentColor" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+                <span class="side-icon" aria-hidden="true"><svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M5 3h11l4 4v11a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1z" stroke="currentColor" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/><path d="M17 21v-7a2 2 0 0 0-2-2H9a2 2 0 0 0-2 2v7" stroke="currentColor" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/><path d="M7 3v4h10V3" stroke="currentColor" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/></svg></span>
+                <span class="btn-label">Save</span>
               </button>
             </div>
           </section>
@@ -90,7 +90,8 @@
             </div>
             <div class="form-actions">
               <button id="saveProfessional" class="icon-save-btn" aria-label="Save Professional" title="Save Professional">
-                <svg viewBox="0 0 24 24" width="18" height="18" aria-hidden="true" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M5 3h11l4 4v11a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1z" stroke="currentColor" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/><path d="M17 21v-7a2 2 0 0 0-2-2H9a2 2 0 0 0-2 2v7" stroke="currentColor" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/><path d="M7 3v4h10V3" stroke="currentColor" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+                <span class="side-icon" aria-hidden="true"><svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M5 3h11l4 4v11a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1z" stroke="currentColor" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/><path d="M17 21v-7a2 2 0 0 0-2-2H9a2 2 0 0 0-2 2v7" stroke="currentColor" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/><path d="M7 3v4h10V3" stroke="currentColor" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/></svg></span>
+                <span class="btn-label">Save</span>
               </button>
             </div>
           </section>
@@ -108,7 +109,8 @@
             </div>
             <div class="form-actions">
               <button id="saveSocial" class="icon-save-btn" aria-label="Save Social" title="Save Social">
-                <svg viewBox="0 0 24 24" width="18" height="18" aria-hidden="true" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M5 3h11l4 4v11a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1z" stroke="currentColor" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/><path d="M17 21v-7a2 2 0 0 0-2-2H9a2 2 0 0 0-2 2v7" stroke="currentColor" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/><path d="M7 3v4h10V3" stroke="currentColor" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+                <span class="side-icon" aria-hidden="true"><svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M5 3h11l4 4v11a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1z" stroke="currentColor" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/><path d="M17 21v-7a2 2 0 0 0-2-2H9a2 2 0 0 0-2 2v7" stroke="currentColor" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/><path d="M7 3v4h10V3" stroke="currentColor" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/></svg></span>
+                <span class="btn-label">Save</span>
               </button>
             </div>
           </section>
